--- a/style.css
+++ b/style.css
@@ -45,11 +45,6 @@
   font-family: var(--my-font);
 }
 
-*::selection {
-  background-color: var(--web-main-color-light);
-  color: var(--web-main-color-dark);
-}
-
 input,
 textarea,
 select {
@@ -82,11 +77,6 @@ html {
     font-size: 56.25%;
   }
 
-  .login-inps {
-    margin-right: 1rem !important;
-    width: 29%;
-  }
-
   .d-data-ctnr {
     margin-top: 1.5rem;
   }
@@ -96,37 +86,15 @@ html {
   html {
     font-size: 50%;
   }
-
-  .login-inps {
-    margin-right: 0.5rem !important;
-    width: 34%;
-  }
-
-  .sub-btn {
-    margin-top: 1rem;
-    width: 20%;
-    transform: translateX(200%);
-  }
 }
 
 @media (max-width: 576px) {
   html {
     font-size: 43.75%;
   }
-
-  .tb-form {
-    position: relative;
-    display: flex;
-    justify-content: center !important;
-    align-items: center;
-  }
 }
 
 @media (max-width: 400px) {
-  .login-inps {
-    width: 30%;
-  }
-
   .d-data-ctnr-prnt {
     width: 100% !important;
   }
@@ -140,7 +108,7 @@ html {
   backdrop-filter: blur(0.5rem);
   border-radius: 1.5rem;
   padding: 5rem;
-  max-width: 40rem;
+  max-width: 55rem;
   width: 100%;
   animation: shadowAnimation 1.5s infinite linear;
 }
@@ -150,37 +118,31 @@ html {
 }
 
 .inp-lbl {
-  color: var(--web-main-color-light);
+  color: white;
   font-size: var(--web-fS-md);
   font-weight: bold;
 }
 
 .login-inps {
-  background-color: var(--web-main-color-light);
+  background-color: white;
   border-radius: 1rem;
   padding: 1rem;
   border: none;
   font-size: var(--web-fS-md);
-  color: var(--web-main-color-dark);
+  color: black;
   margin-right: 3rem;
   font-weight: 500;
 }
 
-.login-inps:focus {
-  background-color: var(--web-main-color-dark);
-  color: var(--web-main-color-light);
-  font-weight: 500;
-}
-
 .login-inps::placeholder {
-  color: var(--web-main-color-dark);
+  color: black;
   text-transform: capitalize;
   font-weight: 500;
 }
 
 .sub-btn {
-  background-color: var(--web-main-color-dark);
-  color: var(--web-main-color-light);
+  background-color: black;
+  color: white;
   font-size: var(--web-fS-md);
   font-weight: bold;
   border-radius: 1rem;
@@ -189,9 +151,63 @@ html {
   transition: 0.5s;
 }
 
+.sub-btn {
+  position: relative;
+  padding: 1.5rem 3rem;
+  font-size: var(--web-fS-md);
+  border: none;
+  border-radius: 1rem;
+  background: #000000;
+  color: white;
+  cursor: pointer;
+  overflow: hidden;
+  transition: color 0.4s;
+  background: black;
+  color: white;
+  z-index: 1;
+}
+
+.sub-btn::before {
+  content: "";
+  position: absolute;
+  top: -100%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: white;
+  z-index: -1;
+  transition: top 0.4s ease;
+}
+
 .sub-btn:hover {
-  background-color: var(--web-main-color-light);
-  color: var(--web-main-color-dark);
+  color: black;
+}
+
+.sub-btn:hover::before {
+  top: 0;
+}
+
+.sub-btn span {
+  position: absolute;
+  z-index: 0;
+}
+
+.sub-btn .ripple {
+  position: absolute;
+  border-radius: 50%;
+  background: rgb(255, 255, 255);
+  width: 1rem;
+  height: 1rem;
+  pointer-events: none;
+  transform: scale(0);
+  animation: ripple-animation 0.5s ease-in-out;
+}
+
+@keyframes ripple-animation {
+  to {
+    transform: scale(4);
+    opacity: 0.3;
+  }
 }
 
 /* topbar end */
@@ -214,22 +230,21 @@ html {
 
 .dshbd-icon {
   margin-right: 1rem;
-  font-size: 2.5rem;
+  font-size: var(--web-fS-md);
 }
 
 .opts,
 .sub-opts {
   background-color: transparent;
   font-size: var(--web-fS-md);
-  padding: 1.2rem;
+  padding: 1rem;
   text-align: left;
   border: none;
   color: white;
   text-transform: capitalize;
-  font-weight: bold;
   transition: 0.5s;
-  position: relative;
   border-left: 0.5rem solid transparent;
+  padding: 1.2rem;
 }
 
 .opts:hover,
@@ -251,6 +266,9 @@ html {
 
 .logo-ctnr {
   border-radius: 1rem;
+}
+.logo-ctnr-2 {
+  background-color: #0259db;
 }
 
 .sub-opt-ctnr {
@@ -321,6 +339,10 @@ html {
   transition: 0.5s;
 }
 
+.d-data-ctnr:hover .d-data-icon i {
+  transform: translateY(1rem) scale(1.1) rotate(10deg);
+}
+
 .d-form-head {
   text-transform: capitalize;
   color: black;
@@ -342,7 +364,6 @@ th {
   color: black !important;
   font-size: var(--web-fS-md);
   font-weight: 600;
-  border: 0.1rem solid var(--web-main-color-dark) !important;
   text-transform: capitalize;
 }
 
@@ -352,21 +373,16 @@ th {
   color: white !important;
 }
 
-.edit-btn,
-.delete-btn {
+.ed-dl-btn-ctnr button {
   border: none;
   background-color: black;
   color: white;
-  font-size: var(--web-fS-md);
+  font-size: var(--web-fS-sm);
   font-weight: 600;
   border-radius: 1rem;
   padding: 0.5rem;
   width: 48%;
-}
-
-.ed-dl-btn-ctnr {
-  border: 0.1rem solid var(--web-main-color-dark) !important;
-  position: relative;
+  margin: 0.5rem 0 0.5rem 0;
 }
 .s-no {
   margin: 0.5rem;
@@ -383,7 +399,6 @@ th {
   top: 0;
   transform: translateX(100%);
   opacity: 0;
-  padding: 0 1.5rem;
 }
 
 .form-label {
