--- a/style.css
+++ b/style.css
@@ -382,8 +382,9 @@ th {
   border-radius: 1rem;
   padding: 0.5rem;
   width: 48%;
-  margin: 0.5rem 0 0.5rem 0;
+  margin: 0.5rem 0;
 }
+
 .s-no {
   margin: 0.5rem;
 }
