--- a/style.css
+++ b/style.css
@@ -103,18 +103,13 @@ html {
 /* font size responsiveness for all devices end*/
 
 /* topbar */
+
 .form-container {
   background: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(0.5rem);
   border-radius: 1.5rem;
-  padding: 5rem;
-  max-width: 55rem;
-  width: 100%;
+  padding: 3rem;
   animation: shadowAnimation 1.5s infinite linear;
-}
-
-.logo {
-  width: 10.5% !important;
 }
 
 .inp-lbl {
@@ -130,7 +125,6 @@ html {
   border: none;
   font-size: var(--web-fS-md);
   color: black;
-  margin-right: 3rem;
   font-weight: 500;
 }
 
@@ -149,65 +143,6 @@ html {
   padding: 1rem;
   border: none;
   transition: 0.5s;
-}
-
-.sub-btn {
-  position: relative;
-  padding: 1.5rem 3rem;
-  font-size: var(--web-fS-md);
-  border: none;
-  border-radius: 1rem;
-  background: #000000;
-  color: white;
-  cursor: pointer;
-  overflow: hidden;
-  transition: color 0.4s;
-  background: black;
-  color: white;
-  z-index: 1;
-}
-
-.sub-btn::before {
-  content: "";
-  position: absolute;
-  top: -100%;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: white;
-  z-index: -1;
-  transition: top 0.4s ease;
-}
-
-.sub-btn:hover {
-  color: black;
-}
-
-.sub-btn:hover::before {
-  top: 0;
-}
-
-.sub-btn span {
-  position: absolute;
-  z-index: 0;
-}
-
-.sub-btn .ripple {
-  position: absolute;
-  border-radius: 50%;
-  background: rgb(255, 255, 255);
-  width: 1rem;
-  height: 1rem;
-  pointer-events: none;
-  transform: scale(0);
-  animation: ripple-animation 0.5s ease-in-out;
-}
-
-@keyframes ripple-animation {
-  to {
-    transform: scale(4);
-    opacity: 0.3;
-  }
 }
 
 /* topbar end */
@@ -229,7 +164,7 @@ html {
 }
 
 .dshbd-icon {
-  margin-right: 1rem;
+  margin-right: 0.5rem;
   font-size: var(--web-fS-md);
 }
 
@@ -414,4 +349,27 @@ td {
   border: none;
   padding: 1rem;
   font-weight: bold;
+}
+
+.main-form-ctnr {
+  height: 80vh;
+}
+
+.dropdown span {
+  font-size: 1.4rem;
+  font-weight: bold;
+}
+
+.dropdown-menu small {
+  font-size: var(--web-fS-sm);
+  font-weight: bold;
+}
+
+.dropdown-menu h4 {
+  font-weight: bold;
+}
+
+.dropdown-item {
+  font-size: var(--web-fS-sm);
+  font-weight: bold !important;
 }
